--- a/map.jinja
+++ b/map.jinja
@@ -1,2 +1,2 @@
 {% set linuxpatch = salt['pillar.get']('linuxpatch', {}) %}
-{% set api_key = linuxpatch.get('api_key', 'your_api_key_here') %}
+{% set lp_key = linuxpatch.get('lp_key', 'your_lp_key_here') %}
